Fixed according to review comments

--- a/activator.properties
+++ b/activator.properties
@@ -1,4 +1,4 @@
 name=akka-supervision
-title=Akka Supervision
+title=Akka Supervision (Scala)
 description=Illustrates supervision in Akka
 tags=Basics,akka,starter
